--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,8 @@ services:
       - ./.env
   web:
     build: ../api_yamdb/
-    restart: always
+    image: kolansers/infra_actions:latest
+    # restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
