--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -58,7 +58,7 @@ jobs:
           script: |
             sudo docker compose stop
             sudo docker compose rm web
-            sudo docker compose pull
+            sudo docker compose pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:workflows_action
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
