--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -45,6 +45,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:workflows_action
 
   deploy:
+    name: Deploy to server
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
@@ -57,8 +58,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker compose stop
-            sudo docker compose rm web
-            sudo docker compose pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:workflows_action
+            sudo docker compose rm web --force
+            sudo docker compose pull web
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -69,14 +70,15 @@ jobs:
             sudo docker compose up -d
 
 
-  # send_message:
-  #   runs-on: ubuntu-latest
-  #   needs: build_and_push_to_docker_hub
-  #   steps:
-  #   - name: send message
-  #     uses: appleboy/telegram-action@master
-  #     with:
-  #       to: ${{ secrets.TELEGRAM_TO }}
-  #       token: ${{ secrets.TELEGRAM_TOKEN }}
-  #       photo: './picture/logo.png'
-  #       message: ${{ github.workflow }} успешно выполнен!
+  send_message:
+    name: Send message to Telegram-bot
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        photo: './picture/logo.png'
+        message: ${{ github.workflow }} успешно выполнен!
