--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -21,6 +21,9 @@ jobs:
 
     - name: Test with flake8
       run:  python -m flake8
+    
+    - name: Pytest
+      run:  pytest
 
   
   build_and_push_to_docker_hub:
